# OdooUpgrader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  release-please.yml  security.yml  upgrade-test-macos.yml  upgrade-test-ubuntu.yml  upgrade-test-windows.yml
docs/: architecture.md  baseline-v0.2.0.md  support-matrix.md
scripts/fixtures/: generate_fixture.sh
src/odooupgrader/: __init__.py  cli.py  constants.py  core.py  errors.py  errors_catalog.py  models.py
src/odooupgrader/services/: __init__.py  archive.py  command_runner.py  config_loader.py  database.py  docker_runtime.py  download.py  filesystem.py  manifest.py  module_audit.py  state.py  upgrade_step.py  validation.py
tests/: test_cli.py  test_core.py
tests/services/: test_archive.py  test_command_runner.py  test_config_loader.py  test_database.py  test_docker_runtime.py  test_download.py  test_errors_catalog.py  test_manifest.py  test_module_audit.py  test_state.py  test_upgrade_step.py  test_validation.py
