[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odooupgrader"
version = "0.7.0"
description = "Docker-based Odoo database migration tool using OpenUpgrade framework"
authors = [{name = "Fasil", email = "fasilwdr@hotmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["odoo", "upgrade", "openupgrade", "database", "migration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "packaging>=23.0",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.6.9",
    "pre-commit>=3.8.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.3",
    "types-requests>=2.32.0.20240218",
    "types-PyYAML>=6.0.12.20240311",
]

[project.urls]
Homepage = "https://github.com/itbrasil-odoo/OdooUpgrader"
Repository = "https://github.com/itbrasil-odoo/OdooUpgrader"
Documentation = "https://github.com/itbrasil-odoo/OdooUpgrader#readme"
Issues = "https://github.com/itbrasil-odoo/OdooUpgrader/issues"

[project.scripts]
odooupgrader = "odooupgrader.cli:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]
ignore = [
    "E501",
    "B904",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
